--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
-
-
-
-
 body {
+  /* animation: balloon 3s ease-in-out infinite alternate; */
   height: 100vh;
   display: flex;
   align-items: center;
@@ -13,6 +10,86 @@ body {
   background-image: url("https://www.psdgraphics.com/wp-content/uploads/2022/01/white-math-paper-texture.jpg");
   background-position: center center;
 }
+
+.balloon {
+  position: absolute;
+
+z-index: 1;  /* animation: balloon1 3s ease-in-out infinite ; */
+  width: 300px;
+  height: 300px;
+  padding: 0;
+  border-radius: 50%;
+}
+.balloonimg1{
+  position: absolute;
+  width: 120px;
+  height: auto;
+  bottom: 0;
+  right: 4px;
+  animation: balloon1 3s ease-in-out infinite ;
+}
+.balloonimg2{
+  position: absolute;
+  width: 130px;
+  height: auto;
+  right: 0px;
+  animation: balloon1 3.5s ease-in-out infinite ;
+}
+.balloonimg3{
+  position: absolute;
+  width: 120px;
+  height: auto;
+  right: 100px;
+  animation: balloon1 3.7s ease-in-out infinite ;
+}
+.balloonimg4{
+  position: absolute;
+  width: 120px;
+  height: auto;
+  right: 120px;
+  animation: balloon1 3.5s ease-in-out infinite ;
+}
+.balloonimg5{
+  position: absolute;
+  width: 120px;
+  height: auto;
+  left: 0px;
+  animation: balloon1 3.5s ease-in-out infinite ;
+}
+.balloonimg6{
+  position: absolute;
+  width: 120px;
+  height: auto;
+  bottom: 4px;
+  left: 20px;
+  animation: balloon1 3.5s ease-in-out infinite ;
+}
+.balloonimg7{
+  position: absolute;
+  width: 120px;
+  height: auto;
+
+  left: 100px;
+  animation: balloon1 4.5s ease-in-out infinite ;
+}
+.balloonimg8{
+  position: absolute;
+  width: 120px;
+  max-height: 600px;
+  bottom: 0;
+  left: 50px;
+  animation: balloon1 2.5s ease-in-out infinite ;
+}
+@keyframes balloon1 {
+  0% {
+    transform: translateY(100%) scale(1) rotateZ(-5deg);
+  }
+  100% {
+    transform: translateY(-100%) scale(1.15) rotateZ(5deg);
+  }
+}
+
+
 
 .paper {
   background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
@@ -29,10 +106,21 @@ body {
 
 .paper.heart {
   position: relative;
-  width: 200px;
+  animation: balloon 3s ease-in-out infinite alternate;
+    width: 200px;
   height: 200px;
   padding: 0;
   border-radius: 50%;
+}
+
+@keyframes balloon {
+  0% {
+    transform: scale(1) rotateZ(-5deg);
+  }
+  100% {
+    transform: scale(1.15) rotateZ(5deg);
+  }
+
 }
 
 .paper.image {
@@ -43,31 +131,38 @@ body {
 }
 
 img {
-  max-height: 200px;
+  max-height: 290px;
+  width: 100%;
+  user-select: none;
+}
+.sizeimg{
+  max-height: 290px;
   width: 100%;
   user-select: none;
 }
 
 .paper.heart::after {
   content: "";
-  background-image: url('https://cdn.pixabay.com/photo/2016/03/31/19/25/cartoon-1294994__340.png');
+  background-image: url('https://png.pngtree.com/png-clipart/20220303/original/pngtree-happy-birthday-with-love-hearts-stereo-paper-cut-font-png-image_7382969.png');
   width: 100%;
   height: 100%;
   position: absolute;
+  /* filter: brightness(0); */
   top: 0;
+  z-index: 2;
   left: 0;
-  background-size: 150px;
+  background-size: 250px;
+  /* background-color: transparent;  */
   background-position: center center;
   background-repeat: no-repeat;
-  opacity: 0.6;
+  /* opacity: 0.6; */
 }
 
 p {
   font-family: 'Zeyada';
   font-size: 50px;
-  color: rgb(0,0,100);
+  color: rgb(0, 0, 255);
   opacity: 0.75;
   user-select: none;
-  
-  // filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9));
+
 }
